--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "remark-gfm": "^4.0.0",
     "sweetalert2": "^11.14.5"
   },
